<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_camera"
            android:icon="@mipmap/ic_logo"
            android:title="@string/menu_camera" />

        <item
            android:id="@+id/nav_gallery"
            android:icon="@mipmap/ic_logo"
            android:title="@string/menu_gallery" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_manage"
            android:icon="@mipmap/ic_logo"
            android:title="@string/menu_tools" />

        <item
            android:id="@+id/nav_share"
            android:icon="@mipmap/ic_logo"
            android:title="@string/menu_share" />
    </group>

    <item android:title="@string/menu_group">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_send"
                    android:icon="@mipmap/ic_logo"
                    android:title="@string/menu_send" />
                <item
                    android:id="@+id/nav_send2"
                    android:icon="@mipmap/ic_logo"
                    android:title="@string/menu_send" />
            </group>
        </menu>
    </item>
</menu>